--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,3 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
 
 :root {
@@ -26,6 +20,10 @@
   font-family: sans-serif;
   font-size: 16px;
   margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -51,6 +49,7 @@ ul {
   max-width: 1440px;
   margin: 0 auto;
   padding-top: 36px;
+  padding-bottom: 44px;
 }
 
 .form {
@@ -200,4 +199,30 @@ ul {
 .gallery {
   width: 358px;
   height: 200px;
+}
+
+.load-more-btn {
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 8px;
+  background: #4e75ff;
+  cursor: pointer;
+  border: none;
+  transition: background 175ms ease-in-out;
+  margin: 0 auto;
+  margin-top: 32px;
+  display: none;
+}
+
+.load-more-btn:hover {
+  background: #6c8cff;
 }
